[package]
name = "lunite_lang"
version = "0.3.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys = { version = "180.0.0", features = ["prefer-dynamic"] }
target-lexicon = "0.12"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
lsp-server = "0.7"
serde_json = "1.0"
lsp-types = "0.95"

[build-dependencies]
cc = "1.0"